Changing Text Align And BackGroud

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello This Is Mohamed Salah</h1>
+    <h4>Web Developer</h4>
     <script src="./app.js"></script>
 </body>
 </html>
